Fix copying path to clipboard in ExportManager

We should be using KSystemClipboard there, not QApplication::clipboard or such

BUG: 444037